# redoxED

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: cell_EIS_1.csv  cell_EIS_1.mpr  cell_EIS_2.mpr  pol_data_raw.mpr
notebooks/: 001_loading_data.ipynb  001_test_loading_data.ipynb  002_battery_cycling.ipynb  002_test_plotting.ipynb  003_polarisation_curves.ipynb  003_test_plotting_dc.ipynb  004_EIS.ipynb  004_test_DRT.ipynb  005_EIS_circuit_fitting.ipynb  005_analytic_DRT.ipynb  006 peak_fit.ipynb  006_EIS_DRT_fitting.ipynb  007 DRT_fit.ipynb  008 circuit_simulation.ipynb  00X_compare_drts.ipynb  00Y_VFB_analysis.ipynb  00Y_high_freq_EIS.ipynb  00Y_my_DRT.ipynb  00Z_degradation.ipynb  010_real_data_example.ipynb  ZZZ sympy example.ipynb  ZZZ_analytic_DRT.ipynb  ZZZ_circuit_simulation.ipynb  ZZZ_timestamp_extraction.ipynb  sympy_attempt.ipynb  timestamp.ipynb
src/redoxed/: __init__.py  config.py
src/redoxed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/redoxed/DC/: __init__.py  cycling_data.py  polarisation_data.py
src/redoxed/data_loading/: __init__.py  data_converters.py  data_loaders.py  ec_data.py
src/redoxed/impedance/: __init__.py  circuit.py  custom_elements.py  drt.py  drt_data.py  eis_data.py  residuals_data.py
src/redoxed/impedance/drt_analysis/: __init__.py  impedance_from_gamma.py  peak_fitting.py  utils.py
src/redoxed/impedance/drt_solver/: __init__.py  hyperparam_selection.py  qp.py  rbf.py  rr_drt.py  utils.py
src/redoxed/plots/: __init__.py  base_plot.py  cycling_plot.py  drt_plot.py  eis_plot.mplstyle  eis_plot.py  generic_plot.py  polarisation_plot.py  redoxed_plot.mplstyle  residuals_plot.py
