[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redoxed"
version = "0.1.0"
description = "A Python module for redox-related computations."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy",  # Example dependency
    "scipy"   # Example dependency
]
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/redoxed"
Repository = "https://github.com/yourusername/redoxed.git"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=6.2",
    "flake8",
    "black",
]