[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redoxed"
version = "0.1.0"
description = "A Python package for electrochemistry data analysis and DRT modeling"
authors = [
    { name = "ES758", email = "es758@cam.ac.uk" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

# Only direct dependencies (packages directly imported in your code)
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "lmfit",
    "pyimpspec",
    "galvani",
    "cvxopt",
]

[project.urls]
Homepage = "https://github.com/ESaundersNano/redoxED"
Repository = "https://github.com/ESaundersNano/redoxED.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "black>=23.0",
]