[project]
name = "redoxED"
version = "0.1.0"
description = "A Python package for electrochemical data analysis and visualisation."
readme = "README.md"
authors = [
    { name = "ESaundersNano", email = "95654485+ESaundersNano@users.noreply.github.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cvxopt>=1.3.3",
    "galvani>=0.5.0",
    "lmfit>=1.3.4",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "yadg>=6.2.2",
]

[project.urls]
Homepage = "https://github.com/ESaundersNano/redoxED"
Repository = "https://github.com/ESaundersNano/redoxED.git"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyterlab>=4.6.1",
    "pyimpspec>=5.1.3",
    "schemdraw>=0.23",
    "sphinx>=9.1.0",
]
